# CS4361-Raytracing-Horror

./: Makefile  flake.nix  meson.build
include/: assets.h  maze.h
src/: assets.c  main.c  maze.c
